# FlightBench

./: .gitignore  .gitmodules  README.md
docs/: README.md  _config.yml
flightbench/: CMakeLists.txt  benchmarks.yaml  package.xml
flightbench/script/: bag_parser.py  cal_difficulty.py  fly_path.py  plot.py  start_baseline.sh  start_simulator.sh  test.py
flightlib/: CMakeLists.txt  setup.py
flightlib/cmake/: gtest_download.cmake  pybind11_download.cmake  pybind11_simple.cmake  yaml_download.cmake  yaml_simple.cmake
flightlib/configs/: dyn_param.yaml  quadrotor_env.yaml  vec_env.yaml
flightlib/src/bridges/: unity_bridge.cpp
flightlib/src/common/: integrator_rk4.cpp
flightlib/src/dynamics/: quadrotor_dynamics.cpp
flightlib/src/envs/: env_base.cpp  vec_env.cpp
flightlib/src/objects/: quadrotor.cpp
flightlib/src/sensors/: rgb_camera.cpp
flightlib/src/wrapper/: pybind_wrapper.cpp
flightlib/tests/envs/: vec_env.cpp
flightrl/: requirements.txt  setup.py
flightrl/onpolicy/: __init__.py  config.py
flightrl/onpolicy/envs/: base_vec_env.py  (+1 more)
flightrl/performance/: 20choose.py  20xushi.py  50Unity.py  RGBDHz.py  cal_related_error.py  imuHz.py  plot3D.py  show_state.py  visualization_pcd.py
flightros/params/: default.yaml
real2sim/: .gitignore
real2sim/src/optimize/: CMakeLists.txt  package.xml
real2sim/src/optimize/config/: default.yaml  default_param.yaml  target_param.yaml
real2sim/src/optimize/include/optimize/: optimize.h
real2sim/src/optimize/launch/: optimize.launch
real2sim/src/optimize/script/: plot.py
real2sim/src/optimize/src/: optimize.cpp
(+99 files in other folders)
