<?xml version="1.0"?>
<package format="2">
  <name>optimize</name>
  <version>0.0.1</version>
  <description>real2sim optimization</description>
  <license>GNU GPL</license>

  <maintainer email="yushuang20010911@outlook.com">Shu'ang Yu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- <depend>flightlib</depend> -->
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>nav_msgs</depend>
  <!-- <depend>eigen_catkin</depend> -->
  <depend>quadrotor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>ceres_catkin</depend>

</package>
 